[gd_scene load_steps=4 format=3 uid="uid://bs4ie85kf1noi"]

[ext_resource type="Script" path="res://GUI/main_menu.gd" id="1_yu5qd"]
[ext_resource type="PackedScene" uid="uid://chf2k8ew41u4q" path="res://GUI/volume_slider.tscn" id="2_0d3oh"]
[ext_resource type="AudioStream" uid="uid://cavxooa1n2y1m" path="res://Music/thetower7.mp3" id="3_j5e1f"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yu5qd")

[node name="GameTitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -121.0
offset_top = 14.0
offset_right = 122.0
offset_bottom = 40.0
grow_horizontal = 2
text = "SUPER AWESEOM GAME TITLE!"
horizontal_alignment = 1
vertical_alignment = 3

[node name="MainMenu" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainMenuButtons" type="VBoxContainer" parent="MainMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -49.0
offset_top = -50.5
offset_right = 49.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="PlayButton" type="Button" parent="MainMenu/MainMenuButtons"]
layout_mode = 2
size_flags_vertical = 3
text = "Play"

[node name="OptionsButton" type="Button" parent="MainMenu/MainMenuButtons"]
layout_mode = 2
size_flags_vertical = 3
text = "Options"

[node name="QuitButton" type="Button" parent="MainMenu/MainMenuButtons"]
layout_mode = 2
size_flags_vertical = 3
text = "Quit"

[node name="OptionsMenu" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="OptionsMenuButtons" type="VBoxContainer" parent="OptionsMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="MasterVolumeLabel" type="Label" parent="OptionsMenu/OptionsMenuButtons"]
layout_mode = 2
text = "Master Volume"

[node name="MasterSlider" parent="OptionsMenu/OptionsMenuButtons" instance=ExtResource("2_0d3oh")]
layout_mode = 2
value = 0.0
bus_name = "Master"

[node name="MusicVolumeLabel" type="Label" parent="OptionsMenu/OptionsMenuButtons"]
layout_mode = 2
text = "Music Volume"

[node name="MusicSlider" parent="OptionsMenu/OptionsMenuButtons" instance=ExtResource("2_0d3oh")]
layout_mode = 2
value = 0.0
bus_name = "Music"

[node name="SFXVolumeLabel" type="Label" parent="OptionsMenu/OptionsMenuButtons"]
layout_mode = 2
text = "SFX Volume"

[node name="SFXSlider" parent="OptionsMenu/OptionsMenuButtons" instance=ExtResource("2_0d3oh")]
layout_mode = 2
value = 0.0
bus_name = "SFX"

[node name="BackButton" type="Button" parent="OptionsMenu/OptionsMenuButtons"]
layout_mode = 2
text = "Back"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_j5e1f")
autoplay = true
bus = &"Music"

[connection signal="pressed" from="MainMenu/MainMenuButtons/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MainMenu/MainMenuButtons/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="MainMenu/MainMenuButtons/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="OptionsMenu/OptionsMenuButtons/BackButton" to="." method="_on_back_button_pressed"]
